Fix line-height issue with various sites
On some sites, it was inheriting a line-height as default which caused
the pages to appear distorted.

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -58,6 +58,7 @@
     {
         font-size: 12px;
         list-style-type: none;
+        line-height: 2;
     }
     p
     {
